--- a/public/styles/settings/typography.scss
+++ b/public/styles/settings/typography.scss
@@ -6,6 +6,6 @@
  *    1.0.0 - 2018/02/23
  */
 
-$s-font-stack-default: 'Nanum Gothic Coding', monospace;
-$s-font-stack-headings: 'Bitter', serif;
-$s-font-size--base: 16px;
+$s-font--stack-default: 'Nanum Gothic Coding', monospace;
+$s-font--stack-headings: 'Bitter', serif;
+$s-font--size--base: 16px;
