--- a/public/styles/index.scss
+++ b/public/styles/index.scss
@@ -15,6 +15,7 @@
 //Tools
 @import './tools/_box-shadow.scss';
 @import './tools/_gradients.scss';
+@import './tools/_responsive.scss';
 
 //Resets
 @import './../../node_modules/normalize.css/normalize.css';
