--- a/public/styles/settings/colors.scss
+++ b/public/styles/settings/colors.scss
@@ -1,3 +1,14 @@
+/*
+ *  Color Settings
+ *    Provides settings for colors
+ *
+ *  Dependencies:
+ *
+ *  Version:
+ *    1.1.0 - 2018/02/23
+ */
 
 $s-color--background-top: #2BF;
 $s-color--background-bottom: #FCF;
+
+$s-border--default: 1px solid #DDD;
