Added poly section

--- a/public/styles/elements/_a.scss
+++ b/public/styles/elements/_a.scss
@@ -3,10 +3,12 @@
  *    Base A/Anchor Seettings
  *
  *  Dependencies:
+ *    styles/settings/colors.scss
  *
  *  Version:
  *    1.0.0 - 2018/02/23
  */
 a {
   text-decoration: none;
+  color: $s-color--links
 }
