--- a/public/styles/settings/colors.scss
+++ b/public/styles/settings/colors.scss
@@ -8,7 +8,14 @@
  *    1.1.0 - 2018/02/23
  */
 
+//Fonts
+$s-color--text: black;
+$s-color--links: #FC78DE;
+
+//Backgrounds
+$s-color--background-default: white;
 $s-color--background-top: #2BF;
 $s-color--background-bottom: #FCF;
 
+//Borders
 $s-border--default: 1px solid #DDD;
