--- a/public/styles/components/_navbar.scss
+++ b/public/styles/components/_navbar.scss
@@ -16,6 +16,7 @@
 $c-navbar--z-index: 100;
 $c-navbar--link-border: $s-border--default;
 $c-navbar--background: white;
+$c-navbar--link-offset: 5px;
 
 .c-navbar {
   position: fixed;
@@ -35,13 +36,21 @@ $c-navbar--background: white;
 }
 
 //Logo
+.c-navbar__logo-container {
+  @include t-align-self(center);
+  width: 12.5em;
+}
+
 .c-navbar__logo {
+  width: 100%;
+  height: 100%;
 }
 
 //Links
 .c-navbar__links {
   width: 100%;
   text-align: right;
+  display: none;
 }
 
 .c-navbar__link {
@@ -51,11 +60,6 @@ $c-navbar--background: white;
   font-size: 1.2em;
   padding: 0 1.5em;
   display: inline-table;
-  background: $c-navbar--background;
-  transition: all 0.2s $s-animation--ease-out-curve;
-
-  &:hover {
-  }
 }
 
 .c-navbar__link-text {
@@ -74,7 +78,24 @@ $c-navbar--background: white;
   .c-navbar {
     width: 90%;
     top:3em;
-    left: 1%;
+    left: 2%;
     @include t-box-shadow(-10px, 10px, 0px, rgba(0, 0, 0, 0.5));
+  }
+
+  .c-navbar__links {
+    displaY: block;
+  }
+
+  .c-navbar__link {
+
+    background: white;
+    transition: all 0.2s $s-animation--ease-out-curve;
+    margin-left: $c-navbar--link-offset;
+    @include t-translate(0em, 0em);
+    @include t-box-shadow(0px, 0px, 0px, rgba(0, 0, 0, 0.5));
+    &:hover {
+      @include t-translate($c-navbar--link-offset, -$c-navbar--link-offset);
+      @include t-box-shadow(-$c-navbar--link-offset, $c-navbar--link-offset, 0px, rgba(0, 0, 0, 0.5));
+    }
   }
 }
