--- a/public/styles/settings/colors.scss
+++ b/public/styles/settings/colors.scss
@@ -11,12 +11,14 @@
 //Fonts
 $s-color--text: black;
 $s-color--links: #FC78DE;
-$s-color--links-hover: lighten($s-color--links, 20%);
+$s-color--links-hover: $s-color--links;
 
 //Backgrounds
-$s-color--background-default: white;
+$s-color--background-default: #FEFCF8;
 $s-color--background-top: #2BF;
 $s-color--background-bottom: #FCF;
 
 //Borders
-$s-border--default: 1px solid #DDD;
+$s-thickness--border-default: 1px;
+$s-thickness--border-thick: 3px;
+$s-color--border--default: $s-thickness--border-default solid #DDD;
