Made about page

--- a/public/styles/components/_page--style-contact.scss
+++ b/public/styles/components/_page--style-contact.scss
@@ -6,7 +6,7 @@
  *    styles/settings/responsive.scss
  *    styles/tools/_repsonsive.scss
  *    styles/tools/_flex.scss
- *    styles/components/_style.scss
+ *    styles/components/_page.scss
  *
  *  Version:
  *    1.0.0 - 2018/03/10
