Finished About Page

--- a/public/styles/components/_page--style-about.scss
+++ b/public/styles/components/_page--style-about.scss
@@ -10,6 +10,10 @@
  *  Version:
  *    1.0.0 - 2018/03/11
  */
+.c-page--style-about__profile-container {
+  margin-bottom: 5em;
+}
+
 .c-page--style-about__profile {
   width: 100%;
   max-width: 256px;
