Added flex-grow mixin

--- a/public/styles/tools/_flex.scss
+++ b/public/styles/tools/_flex.scss
@@ -148,3 +148,12 @@
 	-ms-flex-direction: $value;
 	flex-direction: $value;
 }
+
+//Flex Grow
+@mixin t-flex-grow($int: 0) {
+  -webkit-box-flex: $int;
+  -webkit-flex-grow: $int;
+  -moz-flex-grow: $int;
+  -ms-flex-positive: $int;
+  flex-grow: $int;
+}
