Menu now closes on selection

--- a/public/styles/index.scss
+++ b/public/styles/index.scss
@@ -20,6 +20,7 @@
 @import './tools/_flex.scss';
 @import './tools/_gradients.scss';
 @import './tools/_responsive.scss';
+@import './tools/_text-selection.scss';
 @import './tools/_transform.scss';
 
 @import './tools/_mixin.absolute-centering.scss';
@@ -58,6 +59,7 @@
 @import './components/_section--style-poly.scss';
 @import './components/_section--style-split.scss';
 @import './components/_section--style-three.scss';
+//@import './components/_w95.scss';
 
 //Utilities
 
