--- a/public/styles/components/_page--style-about.scss
+++ b/public/styles/components/_page--style-about.scss
@@ -10,6 +10,11 @@
  *  Version:
  *    1.0.0 - 2018/03/11
  */
+.c-page--style-about {
+  background: url('./../images/dotted_bg_yellow.png');
+  background-size: 16px 16px;
+}
+
 .c-page--style-about__profile-container {
   margin-bottom: 5em;
 }
