--- a/public/styles/index.scss
+++ b/public/styles/index.scss
@@ -50,16 +50,17 @@
 @import './components/_menu.scss';
 @import './components/_navbar.scss';
 @import './components/_page.scss';
-@import './components/_page--style-about.scss';
-@import './components/_page--style-contact.scss';
-@import './components/_page--style-index.scss';
 @import './components/_section.scss';
 @import './components/_section--style-blank-promo.scss';
 @import './components/_section--style-body.scss';
 @import './components/_section--style-poly.scss';
 @import './components/_section--style-split.scss';
 @import './components/_section--style-three.scss';
-//@import './components/_w95.scss';
+@import './components/_w95.scss';
+
+@import './components/_page--style-about.scss';
+@import './components/_page--style-contact.scss';
+@import './components/_page--style-index.scss';
 
 //Utilities
 
