--- a/public/styles/components/_w95.scss
+++ b/public/styles/components/_w95.scss
@@ -3,7 +3,9 @@
 
 @import './w95/_window.scss';
 @import './w95/_title-bar.scss';
+@import './w95/_window-button.scss';
 @import './w95/_text-field.scss';
+@import './w95/_window-menu.scss';
 
 /*$windowBG: #C0C0C0;
 $highlight: #0000BF;
