Added title prop to body section

--- a/public/styles/components/_section--style-body.scss
+++ b/public/styles/components/_section--style-body.scss
@@ -12,6 +12,9 @@
  */
 .c-section--style-body__inner {
   background: $s-color--background-default;
+}
+
+.c-body-section__wrapper {
   padding: 1em;
 }
 
