Attached gradient background fixed on page

--- a/public/styles/components/_page.scss
+++ b/public/styles/components/_page.scss
@@ -14,4 +14,5 @@
   @include t-flex-grow(1);
   @include t-gradient-directional($s-color--background-bottom, $s-color--background-top, 45deg);
   padding-bottom: 5em;
+  background-attachment: fixed;
 }
