Adjusted background gradient

--- a/public/styles/settings/colors.scss
+++ b/public/styles/settings/colors.scss
@@ -15,8 +15,8 @@ $s-color--links-hover: $s-color--links;
 
 //Backgrounds
 $s-color--background-default: #FEFCF8;
-$s-color--background-top: #2BF;
-$s-color--background-bottom: #FCF;
+$s-color--background-top: #F9F;
+$s-color--background-bottom: #BEF;
 
 //Borders
 $s-thickness--border-default: 1px;
