Import skill box and video title

--- a/public/styles/index.scss
+++ b/public/styles/index.scss
@@ -41,6 +41,8 @@
 
 //Objects
 @import './objects/_button.scss';
+@import './objects/_skill-box.scss';
+@import './objects/_video-title.scss';
 
 //Components
 @import './components/_app.scss';
