--- a/public/styles/index.scss
+++ b/public/styles/index.scss
@@ -46,6 +46,7 @@
 
 //Components
 @import './components/_app.scss';
+@import './components/_background-layer';
 @import './components/_footer.scss';
 @import './components/_form.scss';
 @import './components/_header.scss';
