--- a/public/styles/components/_page.scss
+++ b/public/styles/components/_page.scss
@@ -12,7 +12,13 @@
 .c-page {
   min-height: 100%;
   @include t-flex-grow(1);
-  @include t-gradient-directional($s-color--background-bottom, $s-color--background-top, 45deg);
+  //@include t-gradient-directional($s-color--background-bottom, $s-color--background-top, 45deg);
   padding-bottom: 5em;
-  background-attachment: fixed;
+
+  //background-attachment: fixed;
+  //background-color: #000019;
+  //background-image: url('./../images/space.png');
+  //background-repeat: repeat-x;
+  //background-position: center bottom;
+  //background-size: (16px / 1) (384px / 1);
 }
