--- a/public/styles/components/_section--style-three.scss
+++ b/public/styles/components/_section--style-three.scss
@@ -17,8 +17,7 @@
 
 .c-section--style-three__canvas {
   width: 100%;
-  height: 100%;
-  height: 80vmin;
+  height: 100vh;
   top: 0;
   left: 0;
   position: absolute;
