--- a/public/styles/elements/_a.scss
+++ b/public/styles/elements/_a.scss
@@ -11,9 +11,9 @@
 a {
   text-decoration: none;
   color: $s-color--link;
-}
 
-a:hover {
-  text-decoration: underline;
-  color: $s-color--link-hover;
+  &:hover {
+    text-decoration: underline;
+    color: $s-color--link-hover;
+  }
 }
