--- a/public/styles/index.scss
+++ b/public/styles/index.scss
@@ -39,10 +39,10 @@
 
 //Elements
 @import './elements/all.scss';
-@import './elements/body.scss';
 @import './elements/html.scss';
 
 @import './elements/_a.scss';
+@import './elements/_body.scss';
 @import './elements/_headings.scss';
 
 //Objects
