Import animation tools

--- a/public/styles/index.scss
+++ b/public/styles/index.scss
@@ -24,6 +24,7 @@
 @charset "UTF-8";
 
 //Settings
+@import './settings/animation.scss';
 @import './settings/colors.scss';
 @import './settings/responsive.scss';
 @import './settings/typography.scss';
