--- a/public/styles/objects/_app.scss
+++ b/public/styles/objects/_app.scss
@@ -10,6 +10,7 @@
 .o-app {
   display: inline-block;//Fixes collapsing margins on children.
   min-height: 100vh;
+  width: 100%;
 
   //Civil Twilight
   &--style-civil-twilight {
