--- a/public/styles/components/_section.scss
+++ b/public/styles/components/_section.scss
@@ -1,7 +1,17 @@
+/*
+ *  Section
+ *    Styles for the base section component.
+ *
+ *  Dependencies:
+ *
+ *  Version:
+ *    1.0.0 - 2018/05/07
+ */
 .c-section {
+  //border: 1px solid red;
   width: 100%;
 
   &--full {
-    height: 100%;
+    height: 100vh;
   }
 }
