--- a/public/styles/index.scss
+++ b/public/styles/index.scss
@@ -28,6 +28,7 @@
 @import './settings/colors.scss';
 @import './settings/responsive.scss';
 @import './settings/typography.scss';
+@import './settings/z.scss';
 
 //Tools
 @import './tools/flex.scss';
