Improving Video Section

--- a/public/styles/index.scss
+++ b/public/styles/index.scss
@@ -52,6 +52,7 @@
 
 @import './objects/_app.scss';
 @import './objects/_navbar.scss';
+@import './objects/_video.scss';
 
 //Components
 @import './components/_page.scss';
