--- a/public/styles/index.scss
+++ b/public/styles/index.scss
@@ -51,6 +51,7 @@
 @import './objects/main.scss';
 
 @import './objects/_app.scss';
+@import './objects/_loader.scss';
 @import './objects/_navbar.scss';
 @import './objects/_video.scss';
 
