--- a/public/styles/settings/colors.scss
+++ b/public/styles/settings/colors.scss
@@ -30,3 +30,6 @@ $s-color--navbar__text: white;
 $s-color--navbar__text-hover: #CCC;
 $s-color--navbar__bar-hover: $s-color--pastel-blue;
 $s-color--navbar__bar-active: $s-color--pastel-green;
+
+//loader
+$s-color--loader: #CCC;
