Added animation mixins

--- a/public/styles/index.scss
+++ b/public/styles/index.scss
@@ -34,6 +34,7 @@
 @import './tools/flex.scss';
 @import './tools/list.scss';
 @import './tools/prefix.scss';
+@import './tools/_animation.scss'; 
 @import './tools/_transform.scss';
 @import './tools/_responsive.scss';
 
