Made loader animation, missing animation mixins.

--- a/public/styles/settings/colors.scss
+++ b/public/styles/settings/colors.scss
@@ -32,4 +32,4 @@ $s-color--navbar__bar-hover: $s-color--pastel-blue;
 $s-color--navbar__bar-active: $s-color--pastel-green;
 
 //loader
-$s-color--loader: #CCC;
+$s-color--loader: $s-color--swatch-blue;
