--- a/public/styles/settings/animation.scss
+++ b/public/styles/settings/animation.scss
@@ -13,6 +13,10 @@ $s-animation--ease-out-quart: cubic-bezier(0.165, 0.84, 0.44, 1);
 $s-animation--ease-in-quart: cubic-bezier(0.895, 0.03, 0.685, 0.22);
 $s-animation--ease-in-out-quart: cubic-bezier(0.77, 0, 0.175, 1);
 
+$s-animation--ease-out-expo: cubic-bezier(0.19, 1, 0.22, 1);
+$s-animation--ease-in-expo: cubic-bezier(0.95, 0.05, 0.795, 0.035);
+$s-animation--ease-in-out-expo: cubic-bezier(1, 0, 0, 1);
+
 $s-animation--ease-in-out:  $s-animation--ease-in-out-quart;
 $s-animation--ease-in:      $s-animation--ease-in-quart;
 $s-animation--ease-out:     $s-animation--ease-out-quart;
