Added more button customization options

--- a/public/styles/index.scss
+++ b/public/styles/index.scss
@@ -45,6 +45,7 @@
 
 //Elements
 @import './elements/all.scss';
+@import './elements/button.scss';
 @import './elements/html.scss';
 
 @import './elements/_a.scss';
