Adjust deep import logic

--- a/public/styles/index.scss
+++ b/public/styles/index.scss
@@ -54,6 +54,7 @@
 
 //Objects
 @import './objects/main.scss';
+@import './objects/title.scss';
 
 @import './objects/_app.scss';
 @import './objects/_button.scss';
