--- a/public/styles/components/_page.scss
+++ b/public/styles/components/_page.scss
@@ -3,10 +3,16 @@
  *    Styles for the base Page elements.
  *
  *  Dependencies:
+ *    styles/settings/responsive.scss
  *
  *  Version:
  *    1.0.0 - 2018/05/05
  */
 .c-page {
   min-height: 100vh;
+
+  &__boundary {
+    max-width: $s-screen-boundary;
+    margin: 0 auto;
+  }
 }
