Added page specific styles, adjusted typography slightly

--- a/public/styles/index.scss
+++ b/public/styles/index.scss
@@ -68,6 +68,9 @@
 @import './components/_section.scss';
 @import './components/_video-section.scss';
 
+//Pages
+@import './pages/_home-page.scss';
+
 //Utilities
 @import './utilities/text-align.scss';
 
