--- a/public/styles/index.scss
+++ b/public/styles/index.scss
@@ -64,6 +64,7 @@
 @import './objects/_video.scss';
 
 //Components
+@import './components/_image-section.scss';
 @import './components/_page.scss';
 @import './components/_section.scss';
 @import './components/_video-section.scss';
