--- a/public/styles/tools/_absolute-centering.scss
+++ b/public/styles/tools/_absolute-centering.scss
@@ -28,6 +28,14 @@
   @include t-translate-y(-50%);
 }
 
+@mixin t-absolute-fill() {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
 @mixin t-absolute-position-options($inset: 0) {
   position: absolute;
 
