--- a/public/styles/settings/responsive.scss
+++ b/public/styles/settings/responsive.scss
@@ -15,7 +15,7 @@ $s-screen-medium: 1000px;
 $s-screen-large: 1250px;
 $s-screen-xlarge: 1500px;
 
-$s-screen-boundary: $s-screen-xlarge;
+$s-screen-boundary: $s-screen-large;
 
 //Size definitions
 $s-xsmall: 'xsmall';
