--- a/public/styles/index.scss
+++ b/public/styles/index.scss
@@ -36,6 +36,7 @@
 @import './tools/prefix.scss';
 
 @import './tools/_animation.scss';
+@import './tools/_gradient.scss';
 @import './tools/_transform.scss';
 @import './tools/_responsive.scss';
 
@@ -47,6 +48,7 @@
 @import './elements/all.scss';
 @import './elements/button.scss';
 @import './elements/html.scss';
+@import './elements/inputs.scss';
 
 @import './elements/_a.scss';
 @import './elements/_body.scss';
@@ -59,6 +61,8 @@
 @import './objects/_app.scss';
 @import './objects/_button.scss';
 @import './objects/_floating-content-box.scss';
+@import './objects/_form.scss';
+@import './objects/_input.scss';
 @import './objects/_loader.scss';
 @import './objects/_navbar.scss';
 @import './objects/_video.scss';
